The Offer section and Collection section is updated

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@
     flex-wrap: wrap;
     gap: 1rem;
     margin-top: 1rem;
+    cursor: pointer;
 }
 .collections__card-container .card{
     height: 350px;
