--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,7 @@
     font-size: 13px;
     
 }
+
 .collections h1{
     font-weight: 600;
 }
@@ -257,9 +258,283 @@
     padding: 12px 16px;
     z-index: 6;
 }
-
 .content h3{
     font-weight: 400;
     letter-spacing: 0.5px; 
 }
+.get__the_app{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font-weight:400 ;
+    letter-spacing: 0.5px;
+    width: 100%;
+    padding: 3rem 6rem;
+    background-color: rgb(255,251,247);
+    
+}
+.get__the_app .semicontainer{
+    display: flex;
+    flex-wrap: wrap;
+    width:60%;
+    align-items: center;
+    justify-content:center ;
+    gap:1.5rem;
+    
+}
+.get__the_app .semicontainer .left{
+    flex: 2;
+}
+.get__the_app .semicontainer .left img{
+    width:100%;
+    object-fit: cover;
+    object-position: center;
+}
+.get__the_app .semicontainer .right{
+    flex: 3;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.right h1{
+    font-weight: 400;
+    font-size: 2rem;
+}
+.roght p{
+    font-size: 0.8rem;
+    color: gray;
+}
+.semicontainer .right .radio__button_container{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    
+}
+.semicontainer .right .radio__button_container div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.right .radio__button_container div input{
+    height: 15px;
+    width: 15px;
+    accent-color: rgb(239, 11, 106);
+}
+.right .input_container{
+    display: flex;
+    gap: 0.5rem;
+    
+}
+.input_container{
+    flex-wrap: wrap;
+}
+.input_container button,
+.input_container input{
+    padding: 10px 12px;
+}
+.input_container input{
+    flex:auto;
+    border: 1.5px solid grey ;
+    outline: none;
+    border-radius: 5px;
+}
+.input_container button{
+    border: none;
+    background-color: rgb(250, 74, 115);
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+}
+.right .download_App_Container{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.download_App_Container h5{
+    font-weight: 400;
+    color: gray;
+}
+.download_App_Container div{
+    display: flex;
+    gap: 1rem;
+}
+.download_App_Container div img{
+    width: 35%;
+}
+@media only screen and (max-width:1300px){
+    .get__the_app .semicontainer .left,
+    .get__the_app .semicontainer .right{
+        flex: 1;
+    }
+    .get__the_app .semicontainer{
+        width: 90%;
+    }
+}
+@media only screen and (max-width:700px){
+    .get__the_app {
+        padding: 2rem;
+    }
+    .get__the_app .semicontainer{
+        width: 90%;
+    }
+}
+ @media only screen and (max-width:400px){ 
+    .get__the_app {
+        padding: 3rem 0rem;
+    }
+    .get__the_app .semicontainer{
+        width: 80%;
+        flex-direction: column;
+    }
+} 
+.collection__Explore{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
  
+}
+.collection__Explore h1{
+    font-size: 35px;
+    font-weight:500 ;
+    margin-left: 30px;
+}
+.collection__Explore div{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    margin: 10px;
+    padding:1.5rem;
+    gap: 1rem;
+}
+.collection__Explore .Explore_options span{
+    padding: 10px;
+    height: 20px;
+    width: 20px;
+
+}
+.collection__Explore .Explore_options {
+    border: 1.5px solid rgb(215, 215, 215) ;
+    border-radius: 10px;
+    padding: 15px;
+    font-size: 20px;
+    color: rgb(116, 115, 115);
+}
+.footer{
+    width: 100%;
+}
+.footer_section1{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 90%;
+    margin: auto;
+    flex-wrap: wrap;
+    gap: 2.5rem;
+}
+.footer_section1 img {
+    width: 120px;
+}
+
+.section__buttoncontainer {
+    display: flex;
+    gap: 1rem;
+}
+ .section__buttoncontainer button { 
+    padding: 5px 5px;
+    width: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid grey;
+    background-color: transparent;
+    border-radius: 5px;
+    gap: 10px;
+    cursor: pointer;
+}
+
+.navigation_container{ 
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    width: 90%;
+    margin: auto;
+    gap: 1rem;
+    padding: 3rem 0;
+}
+
+.link__container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+
+.link__container h5{
+    font-weight: 500;
+    font-size: 15px;
+    margin-bottom: 5px;
+    letter-spacing: 0.8px;
+
+}
+.footer__link{
+    text-decoration: none;
+    color: grey;
+    font-size: 13px;
+    font-weight: 300;
+}
+.footer__link:hover{
+    color: black;
+}
+.social__link_container{
+    display: flex;
+    gap: 0.5rem;
+}
+.social__link_container button{
+    background-color: black;
+    border: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.social__link_container button i {
+    color: white;
+    font-size: 13px;
+}
+.footer__section_logos{
+    width: 100%;
+}
+.disclaimer{       
+    width: 90%;
+    margin: auto;
+    color: gray;
+    font-size: 12px;
+    border-top: 1px solid grey;
+    padding: 1.5rem;
+}
+@media only screen and (max-width: 900px){
+    .navigation_container{
+        grid-template-columns: 1fr 1fr;
+    }
+}
+@media only screen and (max-width: 600px){
+    .navigation_container{
+        grid-template-columns: 1fr 1fr;
+    }
+
+}
+@media only screen and (max-Width: 450px){
+    .navigation_container{
+        grid-template-columns: 1fr;
+    }
+    .collection__Explore h1{
+        font-size: 25px;
+    }
+}
+    
+
